--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         run: sbt scalafmtCheckAll
 
       - name: Compile
-        run: sbt +compile
+        run: sbt compile
 
       - name: Run tests
-        run: sbt +test
+        run: sbt test
